<resources>
    <string name="app_name">RealEstateApp</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to evaluation form -->
    <string name="address">Address:</string>
    <string name="enter_address">Enter Address</string>
    <string name="number_of_floors">Number of Floors</string>
    <string name="enter_floors">Enter Floors</string>
    <string name="plot_area">Plot Area</string>
    <string name="house_area">House Area</string>
    <string name="enter_area">Enter Area in m^2</string>
    <string name="rooms">Rooms</string>
    <string name="add_room">Add Room</string>

    <!-- Strings related to room activity -->
    <string-array name="room_types">
        <item>Bedroom</item>
        <item>Bathroom</item>
        <item>Kitchen</item>
        <item>Dining Room</item>
        <item>Lounge</item>
        <item>Games Room</item>
        <item>Study</item>
        <item>Bar</item>
    </string-array>
    <string-array name="flooring_types">
        <item>Tiles</item>
        <item>Wood</item>
        <item>Carpet</item>
    </string-array>
    <string name="room_type">Room Type</string>
    <string name="flooring">Flooring</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_drawer_activity">Habitat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="fragment_news_feed_text">This is the layout where all *News Feed* stuff will go</string>
    <string name="fragment_my_evaluations_text">This is the layout where all *My Evaluations* stuff will go</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Signup activity -->
    <string name="SignUp_CreatedUser_0">User created</string>
    <string name="SignUp_Failed_1">System failure</string>
    <string name="SignUp_TextTooLong_2">Input text is too long</string>
    <string name="SignUp_PasswordNoMatch_3">Passwords do not match</string>
    <string name="SignUp_FieldsIncomplete_4">Not all fields completed</string>
    <string name="SignUp_ExistingUser_5">User already exists</string>
</resources>
